--- a/README
+++ b/README
@@ -1,41 +1,20 @@
-OpenEmbedded/Yocto BSP Layer for Host Mobility products based on COMs from Toradex 
+OpenEmbedded/Yocto BSP Layer for Host Mobility products
+
+This layer add our machine customization that include u-boot, drivers and linux kernels. 
+This layer support kirkstone poky. 
+
 =====================================================================
 
 This layer provides support for:
 
-- MX-4 T20
-- MX-4 CT/GTT/VCC
-- MX-4 MIL
-- MX-4 V61/C61
+- MX-4 C61 (mx4-c61)
+- MX-4 T30 (mx4-t30) (both T30 and T30FR)
+- MxV pt (mx5-pt)
+- Hmx (soon to be introdused)
 
 For more information on available Host Moblity products please visit:
 
-http://hostmobility.com/index.php?pageId=557
-
-This layer is largely based on different Toradex meta layers.
-
-Dependencies
-============
-
-This layer depends on:
-
-  URI: git://git.openembedded.org/bitbake
-  branch: 1.32
-  revision: HEAD
-
-  URI: git://git.openembedded.org/openembedded-core
-  layers: meta
-  branch: master
-  revision: HEAD
-
-  URI: git://git.toradex.com/meta-toradex-tegra
-  layers: meta
-  branch: master
-  revision: HEAD
-
-  URI: git://git.toradex.com/meta-toradex-nxp
-  branch: master
-  revision: HEAD
+https://hostmobility-eng.setek.se/
 
 Maintainer
 =======
