--- a/README
+++ b/README
@@ -10,7 +10,7 @@ This layer provides support for:
 - MX-4 C61 (mx4-c61)
 - MX-4 T30 (mx4-t30) (both T30 and T30FR)
 - MX-V PT (mx5-pt)
-- Hmx (soon to be introdused)
+- HMX (soon to be introduced)
 
 For more information on available Host Moblity products please visit:
 
